# Podcast-Episode-Recommender-Embeddings

./: .gitattributes  .gitignore  README.md  chromadb_interaction.py  episode_titles.txt  preprocessing.py  pyproject.toml  query_chroma.ipynb  requirements.txt  streamlit_app.py  write_to_db.py
3dc34baf-619a-433f-acd5-80fec682f08b/: index_metadata.pickle
db/: chroma.sqlite3
db/fa0ed371-09fd-4d22-b728-646914f00fca/: index_metadata.pickle
